Integrated the login API

--- a/app/src/main/res/layout/content_landing_page.xml
+++ b/app/src/main/res/layout/content_landing_page.xml
@@ -5,8 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context=".Main2Activity"
-    tools:showIn="@layout/activity_main2">
+    tools:context=".LandingPage"
+    tools:showIn="@layout/activity_landing_page">
 
     <Button
         android:id="@+id/button"
@@ -15,7 +15,7 @@
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="170dp"
-        android:onClick="Enter2"
+        android:onClick="OnScanButtonClick"
         android:text="Button"
         tools:layout_editor_absoluteX="136dp"
         tools:layout_editor_absoluteY="107dp" />
