--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -8,11 +8,11 @@
     tools:context="?attr/actionModeSplitBackground">
 
     <EditText
-        android:id="@+id/text1"
+        android:id="@+id/emailEditText"
         android:layout_width="189dp"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
-        android:layout_alignStart="@+id/text2"
+        android:layout_alignStart="@+id/passwordEditText"
         android:layout_marginTop="98dp"
         android:ems="10"
         android:inputType="textPersonName"
@@ -22,7 +22,7 @@
         tools:layout_editor_absoluteY="161dp" />
 
     <EditText
-        android:id="@+id/text2"
+        android:id="@+id/passwordEditText"
         android:layout_width="189dp"
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
@@ -35,43 +35,43 @@
         android:textSize="18sp" />
 
     <TextView
-        android:id="@+id/textView2"
+        android:id="@+id/emailTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignBottom="@+id/text1"
+        android:layout_alignBottom="@+id/emailEditText"
         android:layout_alignParentStart="true"
         android:layout_marginStart="35dp"
-        android:text="USERNAME: "
+        android:text="EMAIL:"
         android:textColor="@android:color/background_dark"
         android:textSize="18sp"
         android:textStyle="bold|italic" />
 
     <TextView
-        android:id="@+id/textView3"
+        android:id="@+id/passwordTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignBaseline="@+id/text2"
-        android:layout_alignStart="@+id/textView2"
+        android:layout_alignBaseline="@+id/passwordEditText"
+        android:layout_alignStart="@+id/emailTextView"
         android:text="PASSWORD:"
         android:textColor="@android:color/background_dark"
         android:textSize="18sp"
         android:textStyle="bold|italic" />
 
     <Button
-        android:id="@+id/button1"
+        android:id="@+id/loginButton"
         android:layout_width="144dp"
         android:layout_height="79dp"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="114dp"
-        android:onClick="Enter1"
+        android:onClick="OnLoginButtonClick"
         android:text="ENTER"
         android:textColor="@android:color/holo_red_light"
         android:textSize="24sp"
         android:textStyle="bold|italic" />
 
     <TextView
-        android:id="@+id/t1"
+        android:id="@+id/loginTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
