--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,84 +4,78 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_alignParentEnd="false"
+    android:layout_centerInParent="true"
+    android:layout_centerVertical="true"
+    android:background="@drawable/loginbackground"
     android:visibility="visible"
     tools:context="?attr/actionModeSplitBackground">
 
-    <EditText
-        android:id="@+id/text1"
-        android:layout_width="189dp"
-        android:layout_height="wrap_content"
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="284dp"
+        android:layout_height="130dp"
         android:layout_alignParentTop="true"
-        android:layout_alignStart="@+id/text2"
-        android:layout_marginTop="98dp"
-        android:ems="10"
-        android:inputType="textPersonName"
-        android:textAppearance="@style/TextAppearance.AppCompat"
-        android:textSize="18sp"
-        tools:layout_editor_absoluteX="158dp"
-        tools:layout_editor_absoluteY="161dp" />
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="52dp"
+        android:src="@drawable/logo" />
 
     <EditText
-        android:id="@+id/text2"
-        android:layout_width="189dp"
-        android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
+        android:id="@+id/emailEditText"
+        android:layout_width="220dp"
+        android:layout_height="53dp"
         android:layout_alignParentTop="true"
-        android:layout_marginEnd="13dp"
-        android:layout_marginTop="168dp"
-        android:ems="10"
-        android:inputType="textPassword"
-        android:text="password123"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="252dp"
+        android:background="#11000000"
+        android:drawableLeft="@drawable/loginicon"
+        android:hint="Email"
+        android:textColor="@android:color/background_light"
         android:textSize="18sp" />
 
-    <TextView
-        android:id="@+id/textView2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignBottom="@+id/text1"
-        android:layout_alignParentStart="true"
-        android:layout_marginStart="35dp"
-        android:text="USERNAME: "
-        android:textColor="@android:color/background_dark"
-        android:textSize="18sp"
-        android:textStyle="bold|italic" />
-
-    <TextView
-        android:id="@+id/textView3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignBaseline="@+id/text2"
-        android:layout_alignStart="@+id/textView2"
-        android:text="PASSWORD:"
-        android:textColor="@android:color/background_dark"
-        android:textSize="18sp"
-        android:textStyle="bold|italic" />
-
-    <Button
-        android:id="@+id/button1"
-        android:layout_width="144dp"
-        android:layout_height="79dp"
+    <EditText
+        android:id="@+id/passwordEditText"
+        android:layout_width="220dp"
+        android:layout_height="53dp"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="114dp"
-        android:onClick="Enter1"
-        android:text="ENTER"
-        android:textColor="@android:color/holo_red_light"
-        android:textSize="24sp"
-        android:textStyle="bold|italic" />
+        android:layout_marginBottom="226dp"
+        android:background="#11000000"
+        android:drawableLeft="@drawable/passwordicon"
+        android:ems="10"
+        android:hint="Password"
+        android:inputType="textPassword"
+        android:textColor="@android:color/background_light" />
 
-    <TextView
-        android:id="@+id/t1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginStart="125dp"
-        android:layout_marginTop="15dp"
-        android:text="LOGIN"
-        android:textAllCaps="false"
-        android:textColor="@android:color/holo_red_light"
-        android:textSize="36sp"
-        android:textStyle="bold" />
+    <android.support.v7.widget.CardView
+        android:layout_width="177dp"
+        android:layout_height="46dp"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="171dp"
+        android:visibility="visible"
+        app:cardBackgroundColor="@color/colorAccent"
+        app:cardCornerRadius="20dp">
+
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <Button
+                android:id="@+id/loginButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentTop="true"
+                android:layout_centerHorizontal="true"
+                android:background="@color/colorAccent"
+                android:fontFamily="monospace"
+                android:onClick="onLoginButtonClick"
+                android:text="Login"
+                android:textColor="@android:color/background_light"
+                android:textSize="18sp"
+                android:textStyle="bold|italic" />
+        </RelativeLayout>
+    </android.support.v7.widget.CardView>
 
 </RelativeLayout>
