--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,5 +2,5 @@
 <resources>
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#0b1e9c</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorAccent">#afa975e8</color>
 </resources>
