Completed UI Changes

--- a/app/src/main/res/layout-land/content_loading_screen.xml
+++ b/app/src/main/res/layout-land/content_loading_screen.xml
@@ -5,9 +5,16 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/loadpage"
-    android:visibility="visible"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context=".starting"
-    tools:showIn="@layout/activity_starting">
+    tools:context=".LoadingScreen"
+    tools:showIn="@layout/activity_loading_screen">
+    <ProgressBar
+        android:id="@+id/progressBar2"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="50dp" />
 
 </RelativeLayout>
