--- a/app/src/main/res/layout/content_scanner.xml
+++ b/app/src/main/res/layout/content_scanner.xml
@@ -4,15 +4,16 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@android:color/background_dark"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context=".Main3Activity"
-    tools:showIn="@layout/activity_main3">
+    tools:context=".Scanner"
+    tools:showIn="@layout/activity_scanner">
 
     <fragment
         android:id="@+id/barcode_scanner"
         android:name="info.androidhive.barcode.BarcodeReader"
-        android:layout_width="272dp"
-        android:layout_height="334dp"
+        android:layout_width="300dp"
+        android:layout_height="300dp"
         android:layout_centerInParent="true"
         app:auto_focus="true"
         app:use_flash="false" />
