--- a/app/src/main/res/layout/content_landing_page.xml
+++ b/app/src/main/res/layout/content_landing_page.xml
@@ -14,15 +14,14 @@
         android:layout_width="148dp"
         android:layout_height="51dp"
 
-        android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_marginStart="33dp"
-        android:layout_marginTop="20dp"
-        android:background="#ddffffff"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="67dp"
+        android:background="#00ffffff"
         android:fontFamily="serif"
-        android:text="Title"
+        android:text="     Title"
         android:textAppearance="@style/TextAppearance.AppCompat.Light.Widget.PopupMenu.Small"
-        android:textColor="@android:color/black"
+        android:textColor="@android:color/background_light"
         android:textSize="30sp"
         android:textStyle="bold" />
 
@@ -31,12 +30,13 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
-        android:layout_alignStart="@+id/resultTitle"
-        android:layout_marginTop="94dp"
-        android:background="#ddffffff"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="135dp"
+        android:background="#00ffffff"
         android:fontFamily="serif"
         android:scrollbarAlwaysDrawVerticalTrack="true"
         android:text="TextView"
+        android:textColor="@android:color/background_light"
         android:textSize="18sp" />
 
     <Button
