--- a/app/src/main/res/layout/content_landing_page.xml
+++ b/app/src/main/res/layout/content_landing_page.xml
@@ -25,7 +25,7 @@
         android:textSize="30sp"
         android:textStyle="bold" />
 
-    <EditText
+    <TextView
         android:id="@+id/resultData"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
