--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -55,7 +55,43 @@
         android:layout_height="70dp"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="100dp"
+        android:layout_marginBottom="63dp"
+        android:alpha="0.25"
+        app:cardBackgroundColor="#66FF0000"
+        app:cardCornerRadius="20dp">
+
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginTop="0dp"
+            android:visibility="visible">
+
+            <Button
+                android:id="@+id/signupButton"
+                style="@style/Base.Widget.AppCompat.Button.Borderless"
+                android:layout_width="148dp"
+                android:layout_height="wrap_content"
+
+                android:layout_centerInParent="true"
+                android:background="#66FF0000"
+                android:elevation="0dp"
+                android:fontFamily="serif-monospace"
+                android:onClick="OnSignupButtonClick"
+                android:text="Sign Up"
+                android:textColor="@android:color/background_light"
+                android:textSize="30sp"
+                android:textStyle="bold|italic"
+                android:visibility="visible" />
+        </RelativeLayout>
+    </android.support.v7.widget.CardView>
+
+    <android.support.v7.widget.CardView
+        android:layout_width="195dp"
+        android:layout_height="70dp"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="145dp"
         android:alpha="0.25"
         app:cardBackgroundColor="#66FF0000"
         app:cardCornerRadius="20dp">
