--- a/app/src/main/res/layout/content_landing_page.xml
+++ b/app/src/main/res/layout/content_landing_page.xml
@@ -49,4 +49,21 @@
         android:layout_marginEnd="14dp"
         android:background="@drawable/logo"
         android:onClick="OnScanNewClick" />
+
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentTop="true"
+        app:srcCompat="@mipmap/trash" />
+
+    <ImageView
+        android:id="@+id/imageView3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_toStartOf="@+id/scanNewButton"
+        app:srcCompat="@mipmap/edit" />
+
 </RelativeLayout>
