--- a/app/src/main/res/layout-land/activity_add.xml
+++ b/app/src/main/res/layout-land/activity_add.xml
@@ -36,7 +36,7 @@
         android:text="Title"
         android:textSize="24sp" />
 
-    <TextView
+    <EditText
         android:id="@+id/contentEditText"
         android:layout_width="match_parent"
         android:layout_height="157dp"
