--- a/app/src/main/res/layout/activity_add.xml
+++ b/app/src/main/res/layout/activity_add.xml
@@ -40,7 +40,7 @@
         android:text="Title"
         android:textSize="24sp" />
 
-    <TextView
+    <EditText
         android:id="@+id/contentEditText"
         android:layout_width="match_parent"
         android:layout_height="356dp"
