--- a/app/src/main/res/layout/content_landing_page.xml
+++ b/app/src/main/res/layout/content_landing_page.xml
@@ -51,19 +51,21 @@
         android:onClick="OnScanNewClick" />
 
     <ImageView
-        android:id="@+id/imageView"
+        android:id="@+id/editButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
         android:layout_alignParentTop="true"
+        android:onClick="OnEditButtonClick"
         app:srcCompat="@mipmap/trash" />
 
     <ImageView
-        android:id="@+id/imageView3"
+        android:id="@+id/deleteButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_toStartOf="@+id/scanNewButton"
+        android:onClick="OnDeleteButtonClick"
         app:srcCompat="@mipmap/edit" />
 
 </RelativeLayout>
